@@ -49,6 +49,7 @@ Version 1.7.0-svn:
    * Added attacks_left attribute to unit callable
    * New variable: my_attacks with all possible attacks 
    * Added a new type of candidate move : strategic
+   * Added suitable_keep FormulaAI function to allow easier selection of suitable keep for leader
  * Graphics:
    * New type of animation : "recruiting" used by leaders when recruiting
      units
